Social Media Share

--- a/index.html
+++ b/index.html
@@ -43,16 +43,31 @@
             <div class="article-component__date">28 Jun 2020</div>
           </div>
           <div class="article-component__share-contain">
-            <img src="images/icon-share.svg" alt="share button">
+                
+                <img src="images/icon-share.svg" alt="share button">
+
           </div>
         </div>
+        <div class="social-media">
+          <div class="social-media__share-text">SHARE</div>
+          <img src="images/icon-facebook.svg" alt="share_facebook">
+          <img src="images/icon-twitter.svg" alt="share_twitter">
+          <img src="images/icon-pinterest.svg" alt="share_pinterest">
+          <div class="arrow-down"></div>
+        </div>
+
+
       </div>
     </div>
   </div>
 
+
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Victor Espino for VICODE</a>.
   </div>
+
+  <script src="index.js"></script>
 </body>
 </html>
