--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
             <div class="article-component__author-name">Michelle Appleton</div>
             <div class="article-component__date">28 Jun 2020</div>
           </div>
-          <div class="article-component__share-contain">
-                
+          <div class="article-component__share-contain">           
+              <div class="share-btnContain">
                 <img src="images/icon-share.svg" alt="share button">
-
+              </div>
+              <div class="social-media">
+                <div class="social-media__share-text">SHARE</div>
+                <img src="images/icon-facebook.svg" alt="share_facebook">
+                <img src="images/icon-twitter.svg" alt="share_twitter">
+                <img src="images/icon-pinterest.svg" alt="share_pinterest">
+                <div class="arrow-down"></div>
+              </div>
           </div>
-        </div>
-        <div class="social-media">
-          <div class="social-media__share-text">SHARE</div>
-          <img src="images/icon-facebook.svg" alt="share_facebook">
-          <img src="images/icon-twitter.svg" alt="share_twitter">
-          <img src="images/icon-pinterest.svg" alt="share_pinterest">
-          <div class="arrow-down"></div>
         </div>
 
 
