--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
         <div class="text-contain__info-contain">
-          
+
           <div class="info-contain__author">
             <img class="info-contain__author-avatar" src="images/avatar-michelle.jpg" alt="avatar">
                   
@@ -68,11 +68,11 @@
     </div>
 
 
-
+<!-- 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Victor Espino for VICODE</a>.
-  </div>
+  </div> -->
 
 <!--   <script src="index.js"></script>
  --></body>
