Toogle share contain.

--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
 
           <div class="info-contain__share-contain">           
               <div class="share-contain__share-btnContain">
-                <img src="images/icon-share.svg" alt="share button">
+                <img src="images/icon-share.svg" alt="share button">                
               </div>
               <div class="share-contain__social-media">
                 <div class="social-media__share-text">SHARE</div>
                 <img src="images/icon-facebook.svg" alt="share_facebook">
                 <img src="images/icon-twitter.svg" alt="share_twitter">
                 <img src="images/icon-pinterest.svg" alt="share_pinterest">
-                <div class="arrow-down"></div>
               </div>
           </div>
           
@@ -74,6 +73,6 @@
     Coded by <a href="#">Victor Espino for VICODE</a>.
   </div> -->
 
-<!--   <script src="index.js"></script>
- --></body>
+  <script src="index.js"></script>
+</body>
 </html>
